--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,18 +1,17 @@
 [tool.poetry]
 name = "autofns"
 version = "0.1.0"
-description = ""
+description = "AutoFNS is a utility for automatically calling functions when interacting with the OpenAI Completions."
 authors = ["Lemi Boyce <lemuelboyce@gmail.com>"]
 readme = "README.md"
 license = "MIT"
 packages = [{ include = "autofns", from = "src" }]
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = "^3.10"
 openai = "^1.6.1"
 tenacity = "^8.2.3"
 regex = "^2023.12.25"
-
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.12.1"
